# file-converter

./: .bandit.yml  .flake8  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/csv_to_xlsx/: __init__.py
src/csv_to_xlsx/api/: __init__.py  routes.py
src/csv_to_xlsx/converters/: base.py  csv_to_xlsx.py
src/csv_to_xlsx/domain/: __init__.py
src/csv_to_xlsx/services/: __init__.py  conversion_service.py
tests/: __init__.py  test_csv_to_xlsx.py
