[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "file-converter"
version = "0.1.0"
description = "Extensible backend system for file conversion (CSV to XLSX implemented)"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Andreza Conceicao" }
]

keywords = [
    "file-converter",
    "csv",
    "xlsx",
    "fastapi",
    "backend"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "openpyxl",
    "python-multipart"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "black",
    "pylint",
    "pre-commit"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D100", "D103", "S101"]
"main.py" = ["D100"]

[tool.ruff.format]
quote-style = "double"

[tool.pylint.main]
source-roots = ["src"]

[tool.pylint.design]
min-public-methods = 1
